--- a/roles/ohmyzsh/tasks/main.yml
+++ b/roles/ohmyzsh/tasks/main.yml
@@ -36,3 +36,46 @@
     path: "{{ ansible_env.HOME }}/.zshrc"
     regexp: '^ZSH_THEME='
     line: 'ZSH_THEME="robbyrussell"'
+
+- name: Add zsh-autosuggestions repository
+  become: true
+  ansible.builtin.get_url:
+    url: https://download.opensuse.org/repositories/shells:zsh-users:zsh-autosuggestions/Fedora_Rawhide/shells:zsh-users:zsh-autosuggestions.repo
+    dest: /etc/yum.repos.d/shells:zsh-users:zsh-autosuggestions.repo
+    mode: '0644'
+
+- name: Install zsh-autosuggestions
+  become: true
+  ansible.builtin.dnf:
+    name: zsh-autosuggestions
+    state: present
+
+- name: Clone zsh-autosuggestions git directory
+  ansible.builtin.git:
+    repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
+    dest: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
+    state: present
+
+- name: Install zsh-syntax-highlighting
+  become: true
+  ansible.builtin.dnf:
+    name: zsh-syntax-highlighting
+    state: present
+
+- name: Clone zsh-syntax-highlighting git directory
+  ansible.builtin.git:
+    repo: 'https://github.com/zsh-users/zsh-syntax-highlighting.git'
+    dest: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+    state: present
+
+- name: Clone you-should-use git directory
+  ansible.builtin.git:
+    repo: 'https://github.com/MichaelAquilina/zsh-you-should-use.git'
+    dest: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins/you-should-use"
+    state: present
+
+- name: Clone zsh-bat git directory
+  ansible.builtin.git:
+    repo: 'https://github.com/fdellwing/zsh-bat.git'
+    dest: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins/zsh-bat"
+    state: present
