feat: add new software roles and utilities
- Add nerd-fonts role with JetBrainsMono font installation
- Add peazip archiver with RPM installation
- Add screenshot utilities (xclip, viewnior)
- Add thunderbird email client
- Add zen-browser AppImage installation
- Add light backlight controller
- Update fedora playbook with new roles

--- a/fedora.yml
+++ b/fedora.yml
@@ -18,3 +18,8 @@
     - fuse
     - gamemode
     - dbeaver
+    - zen-browser
+    - thunderbird
+    - screenshots
+    - nerd-fonts
+    - peazip
