feat(ansible): add roles for additional package installations
This commit introduces new Ansible roles to install several tools:
- cursor IDE installation via a get_url task
- dnf-automatic package installation
- material-icons-fonts installation
- podman installation (with a dependency on ohmyzsh and podman-completion command)
- snap (snapd) installation
- tldr installation
- windsurf installation from a remote tar archive

Additionally, fedora.yml is updated to include the new packages for snap, windsurf, material-icons-fonts, dnf-automatic, tldr, and cursor.

--- a/fedora.yml
+++ b/fedora.yml
@@ -23,3 +23,9 @@
     - screenshots
     - nerd-fonts
     - peazip
+    - snap
+    - windsurf
+    - material-icons-fonts
+    - dnf-automatic
+    - tldr
+    - cursor
